[package]
name = "tui"
version = "0.1.0"
authors = ["Nils Martel <nils.martel@graphmasters.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.8.0"                  # A library to build rich terminal user interfaces or dashboards
termion = "1.5"
